# Superlight-browser

./: Cargo.toml  README.md  build.rs
extensions/brownser-adblocker/: manifest.json  rules.json  youtube_blocker.js
extensions/ublock-origin-lite/: manifest.json
extensions/ublock-origin-lite/rulesets/scripting/generic/: ublock-badware.js
src/: adblocker.rs  main.rs
